# ambiente

./: .gdbinit  Makefile  README.md  ambiente.cpp  meson.build  tmp.c
app/: client.cpp  client.h  config.h  workspace.cpp  workspace.h
app/client/: client_logic.cpp  client_logic.h
app/core/models/: client.h
app/core/services/: workspace_service.cpp  workspace_service.h
app/render/: render_client.cpp  render_client.h
app/ui/: utils.cpp  utils.h
config/: config.h  keybindings.h
core/: decorator.cpp
core/barra/: barra.cpp  barra.h
core/input/: keymanager.cpp  keymanager.h
core/workspace/: client.cpp  client.h  workspace.cpp  workspace.h  workspace_manager.cpp  workspace_manager.h
src/: ambiente.cpp  ambiente_bkp.cpp  config.h
utils/: client.cpp  client.h  wallpaper.cpp  wallpaper.h
